--- a/css/preset.css
+++ b/css/preset.css
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 a{
-    color: #ff5e14;
+    color: #fcdb03;
     text-decoration: none;
     transition: all ease 300ms;
     -moz-transition: all ease 300ms;
@@ -63,7 +63,7 @@ a:hover, a:focus{
     letter-spacing: 0;
     background: transparent;
     display: inline-block;
-    color: #FFF;
+    color: #3F51B5;
     height: 60px;
     min-width: 200px;
     padding: 25px 25px;
@@ -72,7 +72,7 @@ a:hover, a:focus{
     margin-bottom: 6px;
 }
 .ind_btn:hover{
-    color: #ff5e14;
+    color: #3F51B5;
 }
 .ind_btn.ib_dark:hover{
     color: #FFF;
@@ -90,7 +90,7 @@ a:hover, a:focus{
 .ind_btn:before{
     width: 100%;
     height: 100%;
-    background: #ff5e14;
+    background: #fcdb03;
     content: '';
     position: absolute;
     left: 0;
@@ -144,11 +144,11 @@ a:hover, a:focus{
     z-index: 3;
 }
 .ind_btn.ib_dark:hover:after{
-    background: #ff5e14;
+    background: #fcdb03;
 }
 .ind_btn_2{
     height: 60px;
-    background: #ff5e14;
+    background: #fcdb03;
     min-width: 170px;
     display: inline-block;
     font-size: 14px;
@@ -247,7 +247,7 @@ input:focus, textarea:focus, select:focus, button:focus{
     color: #959ba9;
 }
 .sub_title.dark_sub_title{
-    color: #ff5e14;
+    color: #fcdb03;
 }
 .sub_title.light_sub_title{
     color: #FFF;
@@ -288,7 +288,7 @@ input:focus, textarea:focus, select:focus, button:focus{
 .sec_title.with_bar:after{
     width: 60px;
     height: 2px;
-    background: #ff5e14;
+    background: #fcdb03;
     content: '';
     position: absolute;
     left: 0;
@@ -310,7 +310,7 @@ input:focus, textarea:focus, select:focus, button:focus{
 .ind_lead{
     font-size: 18px;
     line-height: 30px;
-    color: #ff5e14;
+    color: #3F51B5;
     margin: 0;
 }
 
@@ -378,7 +378,7 @@ input:focus, textarea:focus, select:focus, button:focus{
     color: inherit;
 }
 .breadcrumbs a:hover{
-    color: #ff5e14;
+    color: #fcdb03;
 }
 .breadcrumbs span{
     color: #FFF;
