--- a/css/responsive.css
+++ b/css/responsive.css
@@ -446,13 +446,13 @@ License URI:
     }
     .mobileMenuBar a{
         height: 50px;
-        background: #ff5e14;
+        background: #fcdb03;
         display: inline-block;
         font-size: 14px;
         letter-spacing: 0;
         font-weight: 500;
         text-transform: uppercase;
-        color: #fff;
+        color: #3F51B5;
         text-align: center;
         line-height: 50px;
         position: relative;
@@ -464,7 +464,7 @@ License URI:
     .mainmenu{
         position: relative;
         width: 100%;
-        background: #ff5e14;
+        background: #fcdb03;
         display: none;
         margin-bottom: 15px;
     }
@@ -480,9 +480,9 @@ License URI:
         padding: 0;
     }
     .mainmenu ul li a{
-        color: #FFF;
+        color: #3F51B5;
         background: transparent;
-        -webkit-text-fill-color: #FFF;
+        -webkit-text-fill-color: #3F51B5;
         padding: 20px 15px;
     }
     .mainmenu ul.sub_menu{
