--- a/css/theme.css
+++ b/css/theme.css
@@ -492,6 +492,10 @@ License URI:
     top: 34px;
 }
 
+.rounded-border-image {
+    border-radius: 10%;
+}
+
 .popup_logos img {
     max-height: 80px;
     border-radius: 10px;
@@ -935,7 +939,7 @@ License URI:
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 94, 20, .7);
+    background: #fcdb03;
     content: '';
 }
 
@@ -7005,6 +7009,10 @@ blockquote h6 {
 }
 
 .ib5_inner p span {
+    color: #3F51B5;
+}
+
+.ib5_inner p a {
     color: #3F51B5;
 }
 
